compile_error.txt


###################### OPENCL PROGRAM BUILD DEBUG OUTPUT ######################

C:\Users\farre\AppData\Local\Temp\comgr-049552\input\CompileSource:29:57: warning: format specifies type 'size_t' (aka 'unsigned long') but the argument has type 'int' [-Wformat]
    printf("x %d y %d counter %zu la %d in %d\n", x, y, counter[0], layer_len, input_length);
                              ~~~                       ^~~~~~~~~~
                              %d
C:\Users\farre\AppData\Local\Temp\comgr-049552\input\CompileSource:32:33: warning: format specifies type 'size_t' (aka 'unsigned long') but the argument has type 'int' [-Wformat]
        printf("counter %zu\n", counter[0]);
                        ~~~     ^~~~~~~~~~
                        %d
C:\Users\farre\AppData\Local\Temp\comgr-049552\input\CompileSource:33:27: error: expected expression
        if (counter[0] == )
                          ^
2 warnings and 1 error generated.
Error: Failed to compile source (from CL or HIP source to LLVM IR).
###############################################################################

